@@ -83,7 +83,12 @@ RDEPEND="${DEPEND}"
 # version requirement of the NEED_EMACS variable.
 
 elisp_pkg_setup() {
-	elisp-need-emacs "${NEED_EMACS:-21}" || die "Emacs version too low"
+	elisp-need-emacs "${NEED_EMACS:-21}"
+	case $? in
+		0) ;;
+		1) die "Emacs version too low" ;;
+		*) die "Could not determine Emacs version" ;;
+	esac
 }
 
 # @FUNCTION: elisp_src_unpack
