@@ -1,3 +1,11 @@
+2012-12-12  Ulrich Müller  <ulm@gentoo.org>
+
+	* elisp-common.eclass (elisp-need-emacs): Return 2 as exit status
+	if the comparison could not be done, e.g., if emacs could not be
+	executed in elisp-emacs-version.
+	* elisp.eclass (elisp_pkg_setup): Distinguish between "version too
+	low" and "could not determine version".
+
 2012-09-11  Ulrich Müller  <ulm@gentoo.org>
 
 	* elisp-common.eclass (elisp-site-regen): Remove last remnants of
